# tg_multi_battle_ship

./: battle_ship.py  config.py  game.py  game_master.py  pyproject.toml  setup.cfg  telegram.py
test/: test_game.py
